--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ html
     meta(name='theme-color', content='#C9BA49')
     title Test Stream
   body
-    video#video(width='640', height='480', autoplay)
+    video#video(width='640', height='480')
     button#snap Start
     canvas#canvas(width='640', height='480')
   script(type='text/javascript').
